--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:format": "prettier '**/*.{js,jsx,ts,tsx,json,md,mdx,css,scss,yaml,yml}' --check",
     "test": "playwright test"
   },
+  "dependencies": {
+    "react-textarea-autosize": "^8.5.3"
+  },
   "devDependencies": {
     "@playwright/test": "1.41.1",
     "husky": "^8.0.1",
